MMath/Mat44.h

	DLL Mat44 Mat44Identity();
	DLL Mat44 Mat44Translate(const float x, const float y, const float z);
	DLL Mat44 Mat44RotateX(const float radians);
	DLL Mat44 Mat44RotateY(const float radians);
	DLL Mat44 Mat44RotateZ(const float radians);
	DLL Mat44 Mat44Scale(const float x, const float y, const float z);
	DLL Mat44 Mat44Scale2(const __m128 scale);
	DLL Mat44 Mat44Mul(const Mat44 rhs, const Mat44 lhs);
	DLL Mat44 Mat44Inversed(const Mat44 m);
	DLL Mat44 Mat44InversedFast(const Mat44 m);
	DLL Mat44 Mat44InversedFastNoScale(const Mat44 m);
	DLL Mat44 Mat44Transposed(const Mat44 m);
	DLL float Mat44Determinant(const Mat44 m);
	DLL Vec Mat44VectorTransform(const Mat44 m, const __m128 v);
	DLL Vec Mat44ToEuler(const Mat44 m, const ERotateOrder ro);
	DLL Mat44 Mat44AxisAngle(const __m128 axis, const float radians); // Rotate around a given vector
	DLL Mat44 Mat44Align(const __m128 from, const __m128 to); // Construct a matrix so that, when transforming 'from', the result is 'to'. Uses cross & dot to convert to axis-angle scenario.
	DLL Mat44 Mat44RotateTowards(const __m128 from, const __m128 to);// alias for Align
	DLL Mat44 Mat44LookAt(const __m128 targetDirection, const __m128 upDirection, EAxis forward, EAxis upAxis);
	DLL Mat44 Mat44FromVectors(const __m128 c0, const __m128 c1, const __m128 c2, const __m128 translate);
	DLL Mat44 Mat44ToTop33(const Mat44 m); // simply set the translation column to UNIT_W
	// TODO: Order of operations are unclear while writing this doc, make sure delta * newParent = m
	DLL Mat44 Mat44Delta(const Mat44 m, const Mat44 newParent); // Get this matrix in the space of the other, so that multiply newParent yields the input m
	DLL Mat44 Mat44Rotate(const float radiansX, const float radiansY, const float radiansZ, const ERotateOrder rotateOrder);
	DLL Mat44 Mat44Rotate2(const __m128 radians, const ERotateOrder rotateOrder);
	DLL Mat44 EulerToMat44(const __m128 radians, const ERotateOrder rotateOrder);  // alias for Mat44Rotate2
	DLL Mat44 Mat44TranslateRotate(const float x, const float y, const float z, const float radiansX, const float radiansY, const float radiansZ, const ERotateOrder rotateOrder);
	DLL Mat44 Mat44TranslateRotate2(const __m128 translate, const __m128 radians, const ERotateOrder rotateOrder);
	DLL Mat44 Mat44TRS(const float x, const float y, const float z, const float radiansX, const float radiansY, const float radiansZ, const float scaleX, const float scaleY, const float scaleZ, const ERotateOrder rotateOrder);
	DLL Mat44 Mat44TRS2(const __m128 translate, const __m128 radians, const __m128 scale, const ERotateOrder rotateOrder);
	// The whole point is that it is an alias of Mat44Mul with the SAME ARGUMENT ORDER and the argument names help remind us how it works
	DLL Mat44 Mat44Parented(const Mat44 child, const Mat44 parent);
	// TODO: euler decomposition rotate order support
	DLL Mat44ValidationFlags Mat44Validate(const Mat44 m, const Mat44ValidationFlags flags, const float epsilon); // useful for throwing warnings
	DLL Mat44 Mat44MakeValid(const Mat44 m, const Mat44ValidationFlags flags); // useful for rectifying warnings (at the cost of being fairly slow)
	DLL Vec Mat44ToScale(const Mat44 m); // decompose scale
	DLL Vec Mat44ToTranslate(const Mat44 m); // decompose translate
	DLL Mat44 Mat44Frustum(const float left, const float right, const float top, const float bottom, const float near, const float far);
	DLL Mat44 Mat44PerspectiveX(const float horizontalFieldOfViewRadians, const float aspectRatio, const float near, const float far);
	DLL Mat44 Mat44PerspectiveY(const float verticalFieldOfViewRadians, const float aspectRatio, const float near, const float far);
	DLL Mat44 Mat44Orthographic(const float left, const float right, const float top, const float bottom, const float near, const float far);
	DLL Mat44 Mat44OrthoSymmetric(const float width, const float height, const float near, const float far);