MMath/Quat.h

	DLL Quat QuatIdentity();
	DLL Quat QuatRotateX(float radians);
	DLL Quat QuatRotateY(float radians);
	DLL Quat QuatRotateZ(float radians);
	DLL Quat QuatMul(Quat lhs, Quat rhs);
	DLL float QuatDot(Quat a, Quat b);
	DLL float QuatSqrMagnitude(Quat q);
	DLL float QuatMagnitude(Quat q);
	DLL Quat QuatNormalized(Quat q, Quat fallback);
	DLL Quat QuatInversed(Quat q); // also known as conjugate
	DLL Quat QuatConjugated(Quat q); // also known as inverse
	DLL Quat QuatSlerp(Quat l, Quat r, float t);
	DLL Vec QuatVectorTransform(Quat q, __m128 v);
	DLL Vec QuatToEuler(Quat q, ERotateOrder order);