mmath.py

"""
MMath - vector math library for 3D applications.
Released under the MIT License:

Copyright 2020 Trevor van Hoof

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
"""
import os
import ctypes
from MMath import menum
from math import pi as PI

_instance = None


class ERotateOrder(menum.Enum, int):
    XYZ = 0b000110
    YZX = 0b011000
    ZXY = 0b100001
    XZY = 0b001001
    YXZ = 0b010010
    ZYX = 0b100100

    @classmethod
    def from_param(cls, *args):
        return ctypes.c_int.from_param(*args)


class EAxis(menum.Enum, int):
    X = 0b000
    Y = 0b001
    Z = 0b010
    NEG_X = 0b100
    NEG_Y = 0b101
    NEG_Z = 0b110

    @classmethod
    def from_param(cls, *args):
        return ctypes.c_int.from_param(*args)


class Mat44ValidationFlags(menum.Enum, int):
    ValidationOK = 0b00000
    Orthagonal = 0b00001
    Normalized = 0b00010
    Uniform = 0b00100
    NotFlipped = 0b01000
    FourthRow = 0b10000

    @classmethod
    def from_param(cls, *args):
        return ctypes.c_int.from_param(*args)


def _dll():
    global _instance
    if _instance is not None:
        return _instance
    _instance = ctypes.WinDLL(os.path.join(os.path.dirname(os.path.abspath(__file__)), 'x64', 'DLLRelease', 'MMath.dll'))
    # Mat44.h
    _instance.Mat44Identity.argtypes = tuple()
    _instance.Mat44Identity.restype = Mat44
    _instance.Mat44Translate.argtypes = (ctypes.c_float, ctypes.c_float, ctypes.c_float)
    _instance.Mat44Translate.restype = Mat44
    _instance.Mat44RotateX.argtypes = (ctypes.c_float,)
    _instance.Mat44RotateX.restype = Mat44
    _instance.Mat44RotateY.argtypes = (ctypes.c_float,)
    _instance.Mat44RotateY.restype = Mat44
    _instance.Mat44RotateZ.argtypes = (ctypes.c_float,)
    _instance.Mat44RotateZ.restype = Mat44
    _instance.Mat44Scale.argtypes = (ctypes.c_float, ctypes.c_float, ctypes.c_float)
    _instance.Mat44Scale.restype = Mat44
    _instance.Mat44Scale2.argtypes = (Float4,)
    _instance.Mat44Scale2.restype = Mat44
    _instance.Mat44Mul.argtypes = (Mat44, Mat44)
    _instance.Mat44Mul.restype = Mat44
    _instance.Mat44Inversed.argtypes = (Mat44,)
    _instance.Mat44Inversed.restype = Mat44
    _instance.Mat44InversedFast.argtypes = (Mat44,)
    _instance.Mat44InversedFast.restype = Mat44
    _instance.Mat44InversedFastNoScale.argtypes = (Mat44,)
    _instance.Mat44InversedFastNoScale.restype = Mat44
    _instance.Mat44Transposed.argtypes = (Mat44,)
    _instance.Mat44Transposed.restype = Mat44
    _instance.Mat44Determinant.argtypes = (Mat44,)
    _instance.Mat44Determinant.restype = ctypes.c_float
    _instance.Mat44VectorTransform.argtypes = (Mat44, Float4)
    _instance.Mat44VectorTransform.restype = Float4
    _instance.Mat44ToEuler.argtypes = (Mat44, ERotateOrder)
    _instance.Mat44ToEuler.restype = Float4
    _instance.Mat44AxisAngle.argtypes = (Float4, ctypes.c_float)
    _instance.Mat44AxisAngle.restype = Mat44
    _instance.Mat44Align.argtypes = (Float4, Float4)
    _instance.Mat44Align.restype = Mat44
    _instance.Mat44RotateTowards.argtypes = (Float4, Float4)
    _instance.Mat44RotateTowards.restype = Mat44
    _instance.Mat44LookAt.argtypes = (Float4, Float4, EAxis, EAxis)
    _instance.Mat44LookAt.restype = Mat44
    _instance.Mat44FromVectors.argtypes = (Float4, Float4, Float4, Float4)
    _instance.Mat44FromVectors.restype = Mat44
    _instance.Mat44ToTop33.argtypes = (Mat44,)
    _instance.Mat44ToTop33.restype = Mat44
    _instance.Mat44Delta.argtypes = (Mat44, Mat44)
    _instance.Mat44Delta.restype = Mat44
    _instance.Mat44Rotate.argtypes = (ctypes.c_float, ctypes.c_float, ctypes.c_float, ERotateOrder)
    _instance.Mat44Rotate.restype = Mat44
    _instance.Mat44Rotate2.argtypes = (Float4, ERotateOrder)
    _instance.Mat44Rotate2.restype = Mat44
    _instance.EulerToMat44.argtypes = (Float4, ERotateOrder)
    _instance.EulerToMat44.restype = Mat44
    _instance.Mat44TranslateRotate.argtypes = (ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ERotateOrder)
    _instance.Mat44TranslateRotate.restype = Mat44
    _instance.Mat44TranslateRotate2.argtypes = (Float4, Float4, ERotateOrder)
    _instance.Mat44TranslateRotate2.restype = Mat44
    _instance.Mat44TRS.argtypes = (ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ERotateOrder)
    _instance.Mat44TRS.restype = Mat44
    _instance.Mat44TRS2.argtypes = (Float4, Float4, Float4, ERotateOrder)
    _instance.Mat44TRS2.restype = Mat44
    _instance.Mat44Parented.argtypes = (Mat44, Mat44)
    _instance.Mat44Parented.restype = Mat44
    _instance.Mat44Validate.argtypes = (Mat44, Mat44ValidationFlags, ctypes.c_float)
    _instance.Mat44Validate.restype = Mat44ValidationFlags
    _instance.Mat44MakeValid.argtypes = (Mat44, Mat44ValidationFlags)
    _instance.Mat44MakeValid.restype = Mat44
    _instance.Mat44ToScale.argtypes = (Mat44,)
    _instance.Mat44ToScale.restype = Float4
    _instance.Mat44ToTranslate.argtypes = (Mat44,)
    _instance.Mat44ToTranslate.restype = Float4
    _instance.Mat44Frustum.argtypes = (ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float)
    _instance.Mat44Frustum.restype = Mat44
    _instance.Mat44PerspectiveX.argtypes = (ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float)
    _instance.Mat44PerspectiveX.restype = Mat44
    _instance.Mat44PerspectiveY.argtypes = (ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float)
    _instance.Mat44PerspectiveY.restype = Mat44
    _instance.Mat44Orthographic.argtypes = (ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float)
    _instance.Mat44Orthographic.restype = Mat44
    _instance.Mat44OrthoSymmetric.argtypes = (ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float)
    _instance.Mat44OrthoSymmetric.restype = Mat44
    # Quat.h
    _instance.QuatIdentity.argtypes = tuple()
    _instance.QuatIdentity.restype = Quat
    _instance.QuatRotateX.argtypes = (ctypes.c_float,)
    _instance.QuatRotateX.restype = Quat
    _instance.QuatRotateY.argtypes = (ctypes.c_float,)
    _instance.QuatRotateY.restype = Quat
    _instance.QuatRotateZ.argtypes = (ctypes.c_float,)
    _instance.QuatRotateZ.restype = Quat
    _instance.QuatMul.argtypes = (Quat, Quat)
    _instance.QuatMul.restype = Quat
    _instance.QuatDot.argtypes = (Quat, Quat)
    _instance.QuatDot.restype = ctypes.c_float
    _instance.QuatSqrMagnitude.argtypes = (Quat,)
    _instance.QuatSqrMagnitude.restype = ctypes.c_float
    _instance.QuatMagnitude.argtypes = (Quat,)
    _instance.QuatMagnitude.restype = ctypes.c_float
    _instance.QuatNormalized.argtypes = (Quat, Quat)
    _instance.QuatNormalized.restype = Quat
    _instance.QuatInversed.argtypes = (Quat,)
    _instance.QuatInversed.restype = Quat
    _instance.QuatConjugated.argtypes = (Quat,)
    _instance.QuatConjugated.restype = Quat
    _instance.QuatSlerp.argtypes = (Quat, Quat, ctypes.c_float)
    _instance.QuatSlerp.restype = Quat
    _instance.QuatVectorTransform.argtypes = (Quat, Float4)
    _instance.QuatVectorTransform.restype = Float4
    _instance.QuatToEuler.argtypes = (Quat, ERotateOrder)
    _instance.QuatToEuler.restype = Float4
    # Vector.h
    _instance.Vec4Dot.argtypes = (Float4, Float4)
    _instance.Vec4Dot.restype = ctypes.c_float
    _instance.Vec4SqrMagnitude.argtypes = (Float4,)
    _instance.Vec4SqrMagnitude.restype = ctypes.c_float
    _instance.Vec4Magnitude.argtypes = (Float4,)
    _instance.Vec4Magnitude.restype = ctypes.c_float
    _instance.Vec4Normalized.argtypes = (Float4, Float4)
    _instance.Vec4Normalized.restype = Vec4
    _instance.Vec4NormalizedUnsafe.argtypes = (Float4,)
    _instance.Vec4NormalizedUnsafe.restype = Vec4
    _instance.Vec4Perpendicular.argtypes = (Float4,)
    _instance.Vec4Perpendicular.restype = Vec4
    _instance.Vec3Dot.argtypes = (Float4, Float4)
    _instance.Vec3Dot.restype = ctypes.c_float
    _instance.Vec3Cross.argtypes = (Float4, Float4)
    _instance.Vec3Cross.restype = Vec3
    _instance.Vec3SqrMagnitude.argtypes = (Float4,)
    _instance.Vec3SqrMagnitude.restype = ctypes.c_float
    _instance.Vec3Magnitude.argtypes = (Float4,)
    _instance.Vec3Magnitude.restype = ctypes.c_float
    _instance.Vec3Normalized.argtypes = (Float4, Float4)
    _instance.Vec3Normalized.restype = Vec3
    _instance.Vec3NormalizedUnsafe.argtypes = (Float4,)
    _instance.Vec3NormalizedUnsafe.restype = Vec3
    _instance.Vec3Perpendicular.argtypes = (Float4,)
    _instance.Vec3Perpendicular.restype = Vec3
    _instance.Vec2Dot.argtypes = (Float4, Float4)
    _instance.Vec2Dot.restype = ctypes.c_float
    _instance.Vec2Cross.argtypes = (Float4, Float4)
    _instance.Vec2Cross.restype = ctypes.c_float
    _instance.Vec2SqrMagnitude.argtypes = (Float4,)
    _instance.Vec2SqrMagnitude.restype = ctypes.c_float
    _instance.Vec2Magnitude.argtypes = (Float4,)
    _instance.Vec2Magnitude.restype = ctypes.c_float
    _instance.Vec2Normalized.argtypes = (Float4, Float4)
    _instance.Vec2Normalized.restype = Vec2
    _instance.Vec2NormalizedUnsafe.argtypes = (Float4,)
    _instance.Vec2NormalizedUnsafe.restype = Vec2
    _instance.Vec2Perpendicular.argtypes = (Float4,)
    _instance.Vec2Perpendicular.restype = Vec2
    # Friends.h
    _instance.QuatToMat44.argtypes = (Quat,)
    _instance.QuatToMat44.restype = Mat44
    _instance.Mat44ToQuat.argtypes = (Mat44,)
    _instance.Mat44ToQuat.restype = Quat
    # Vector.cpp
    _instance.VecAdd.argtypes = (Float4, Float4)
    _instance.VecAdd.restype = Float4
    _instance.VecSub.argtypes = (Float4, Float4)
    _instance.VecSub.restype = Float4
    _instance.VecMul.argtypes = (Float4, Float4)
    _instance.VecMul.restype = Float4
    _instance.VecDiv.argtypes = (Float4, Float4)
    _instance.VecDiv.restype = Float4
    _instance.VecMin.argtypes = (Float4, Float4)
    _instance.VecMin.restype = Float4
    _instance.VecMax.argtypes = (Float4, Float4)
    _instance.VecMax.restype = Float4
    _instance.VecAbs.argtypes = (Float4,)
    _instance.VecAbs.restype = Float4
    _instance.VecSign.argtypes = (Float4,)
    _instance.VecSign.restype = Float4
    _instance.VecNegate.argtypes = (Float4,)
    _instance.VecNegate.restype = Float4
    _instance.VecSin.argtypes = (Float4,)
    _instance.VecSin.restype = Float4
    _instance.VecCos.argtypes = (Float4,)
    _instance.VecCos.restype = Float4
    _instance.VecFloor.argtypes = (Float4,)
    _instance.VecFloor.restype = Float4
    _instance.VecCeil.argtypes = (Float4,)
    _instance.VecCeil.restype = Float4
    _instance.VecRound.argtypes = (Float4,)
    _instance.VecRound.restype = Float4

    return _instance


_float4 = ctypes.c_float * 4


class Float4(ctypes.Structure):
    _fields_ = [('m', _float4)]
